# ert-exercises

./: .gitignore  edp_aranda.docx  readme.md
aws_cloudformation/: .gitignore  mirror.template  mirror.yml  readme.md  tasks.sh
c_optimize/: readme.md  tasks.sh  test_j  test_j.c  test_j.orig  test_j.orig.c  time_test_j.orig.txt  time_test_j.txt
iri_edp/: iri16.makefile  makefile  readme.md  tasks.sh
iri_edp/csv/: t1.csv  t2.csv
iri_edp/src/: run_iri.c
rtsw/: .gitignore  docker-compose.yaml  pyproject.toml  readme.md  tasks.sh
rtsw/db/migrations/: 0_initial.down.sql  0_initial.up.sql
rtsw/env/: dev
rtsw/example_data/: rtsw_1hr.json
rtsw/rtsw/persist/: __init__.py
rtsw/rtsw/persist/manage/: __init__.py  __main__.py
rtsw/rtsw/persist/query/: __init__.py  __main__.py
rtsw/rtsw/shared/: __init__.py
rtsw/rtsw/web/: __init__.py  __main__.py  dependencies.py
rtsw/rtsw/web/templates/: base.html  dashboard.html
rtsw/tests/integration/: test_fetch_rtsw.py
